--- a/src/components/graphics/graphics.css
+++ b/src/components/graphics/graphics.css
@@ -103,11 +103,11 @@
 }
 
 .stroke-canardman-background-0 {
-    stroke: #08088a
+    stroke: #181829;
 }
 
 .fill-canardman-background-0 {
-    fill: #181829
+    fill: #181829;
 }
 
 .fill-canardman-background-1 {
